update info, comment out teaching and portfolio

--- a/_pages/talkmap.html
+++ b/_pages/talkmap.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Talk map"
+title: "Places where I've givne talks over the years."
 permalink: /talkmap/
 author_profile: true
 ---
